--- a/components/backend-tests-go-qeqljmux/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-qeqljmux/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-qeqljmux
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-qeqljmux:4eef7b46bfcfb825a234c3240700b0d3e2ad485b@sha256:7046f2d77225fb84990350eb63db87e7dd85a3e931d6b55f8dd5cea115000190
+          name: container-image
